--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@reduxjs/toolkit": "^2.0.1",
     "autoprefixer": "10.4.16",
     "next-redux-wrapper": "^8.1.0",
