--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-range-slider-input": "^3.0.7",
     "react-redux": "^9.0.4",
     "redux": "^5.0.1",
     "tailwindcss": "3.4.0"
